# snake-cli

./: .gitignore  snake.h
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  snake_tests.cpp  snake_tests[1]_include.cmake  snake_tests[1]_tests.cmake
tests/Testing/Temporary/: CTestCostData.txt
tests/snake_tests.dir/Debug/: snake_tests.exe.recipe
tests/snake_tests.dir/Debug/snake_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
tests/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
tests/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
